@@ -36,7 +36,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with 
+2008-01-07 DP  1.8.2  Newer build of EnterpriseDB consistently strip trailing 
+                      semi-colons from package headers and bodies. Update 
+                      reverse engineering allow for this.
+2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with
                       objects named " " (!).
 2008-01-07 DP  1.8.2  EDB-SPL functions require NULL to be passed in out-params
                       when debugging.
